care/force-app/main/default/objects/US_Knowledge__kav/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Answer</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>