care/force-app/main/default/objects/US_Knowledge__kav/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Used to describe the contents of the Article. Used by Member Care to provide instructions to the Service Reps.</inlineHelpText>
    <label>Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>