care/force-app/main/default/objects/US_Knowledge__kav/fields/Whitelist_Article_for_Web_Cases__c.field-meta.xml
<CustomField>
    <fullName>Whitelist_Article_for_Web_Cases__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>US Basic Seekers will only be able to create Web Cases from Articles that are Whitelisted.</inlineHelpText>
    <label>Whitelist Article for Web Cases</label>
    <type>Checkbox</type>
</CustomField>