care/force-app/main/default/objects/US_Knowledge__kav/recordTypes/US_Knowledge.recordType-meta.xml
<RecordType>
    <fullName>US_Knowledge</fullName>
    <active>true</active>
    <label>US_Knowledge</label>
</RecordType>