care/force-app/main/default/objects/US_Knowledge__kav/listViews/Published_International_Articles.listView-meta.xml
<ListView>
    <fullName>Published_International_Articles</fullName>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>LANGUAGE</columns>
    <columns>IS_CHANNEL_PKB</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>en_GB</value>
    </filters>
    <label>Published UK Articles</label>
</ListView>